--- a/302CEM_BS/src/app/app.component.html
+++ b/302CEM_BS/src/app/app.component.html
@@ -352,6 +352,7 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
+  <p>I am here to do some testing</p>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
