Added header for homepage

--- a/302CEM_BS/src/app/homepage/homepage.component.html
+++ b/302CEM_BS/src/app/homepage/homepage.component.html
@@ -1,1 +1,52 @@
-<p>hp</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+    <!-- Header -->
+    
+    <div class="wrapper row1">
+        <p style="text-align: center;"> &nbsp;&nbsp;&nbsp;&nbsp; Spend more and save more! With the new launch event under the New Back To School Promotion!</p>
+    </div>
+        <header id="header" class="clear">
+            <table border="0" width="830px">
+                <tr>
+                    <td align="center">
+                        <img src='assets/images/book_logo.png' height='80' width='80'>
+                    </td>
+                    <td>
+                        <h1>Online Book Store </h1>
+                    </td>
+                    <td align="right">
+                        <a href="cart"><img src='assets/images/cart_logo.png' height='40' width='40'></a>
+                    </td>
+                </tr>
+            </table>
+        </header>
+
+        <div class="wrapper row1">
+            <header id="header" class="clear">
+                <div id="hgroup">
+                <nav>
+                        <ul>
+                        <li><a href='homepage'>Home</a></li>
+                        <li><a href=''>Purchase History</a></li>
+                        <li><a href=''>Setting</a></li>
+                        <li><a href=''>Admin Page</a></li>
+                        <li><a href=''>Register</a></li>
+                        <li class='last'><a href=''>Sign In</a></li>
+                        </ul>
+                </nav>
+              </div>
+            </header>
+        </div>
+    
+        <!-- Content Section -->
+
+        <div class="wrapper row2">
+            <div id="container" class="clear">
+                
+
+            </div>
+        </div>
+
+
+</html>
