--- a/302CEM_BS/src/app/homepage/homepage.component.html
+++ b/302CEM_BS/src/app/homepage/homepage.component.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
     <!-- Header -->
-    
+
     <div class="wrapper row1">
         <p style="text-align: center;"> &nbsp;&nbsp;&nbsp;&nbsp; Spend more and save more! With the new launch event under the New Back To School Promotion!</p>
     </div>
@@ -31,22 +31,69 @@
                         <li><a href=''>Purchase History</a></li>
                         <li><a href=''>Setting</a></li>
                         <li><a href=''>Admin Page</a></li>
-                        <li><a href=''>Register</a></li>
-                        <li class='last'><a href=''>Sign In</a></li>
+                        <li><a href='register'>Register</a></li>
+                        <li class='last'><a href='login'>Login</a></li>
                         </ul>
                 </nav>
               </div>
             </header>
         </div>
+
+        <br/><br/>
     
         <!-- Content Section -->
 
-        <div class="wrapper row2">
-            <div id="container" class="clear">
-                
+        <h1 style="text-align: center;">Books</h1>
+        <br/>
 
-            </div>
+        <div class="wrapper-bookrow">
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
+
+                <div>
+                    <a href=""><img src='assets/images/book1.jpeg' height='250' width='150'></a>
+                    <h4> Book Title 1 </h4>
+                </div>
         </div>
 
+        
 
 </html>
